--- a/src/app/dashboard/presentational/machine/machine.component.html
+++ b/src/app/dashboard/presentational/machine/machine.component.html
@@ -1,4 +1,4 @@
-<h2>Kapasite Kullanımı</h2>
+<h2>Aktif Makine</h2>
 
 <div class="container-center">
   <ngx-charts-gauge
@@ -8,7 +8,7 @@
     [max]="100"
     [angleSpan]="240"
     [startAngle]="-120"
-    [units]="'Kapasite'"
+    [units]="'percent'"
     [bigSegments]="10"
     [smallSegments]="5"
   >
