--- a/src/app/dashboard/container/dashboard/dashboard.component.html
+++ b/src/app/dashboard/container/dashboard/dashboard.component.html
@@ -1,33 +1,53 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
-    <div class="mx-auto wrapper">
-      <app-cpu
-        *ngIf="signalrConnectionEstablished$ | async; else loading"
-        [cpuValue]="cpuValue$ | async"
-      ></app-cpu>
-    </div>
-  </div>
 
-  <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
-    <div class="mx-auto wrapper">
-      <app-food
-        [foodItems]="foodItems$ | async"
-        [connectionEstablished]="signalrConnectionEstablished$ | async"
-        (foodSaved)="saveFood($event)"
-        (foodDeleted)="deleteFood($event)"
-      ></app-food>
-    </div>
-  </div>
 
-  <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5">
-    <div class="mx-auto wrapper">
-      <app-chat
-        [connectionEstablished]="signalrConnectionEstablished$ | async"
-        (sendChat)="sendChat($event)"
-        [chatmessages]="chatmessages"
-      ></app-chat>
-    </div>
+<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+  <div class="col-md-12">
+      <div class="row">
+          <div class="col-md-6">
+            <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
+              <div class="mx-auto wrapper">
+                <app-cpu
+                  *ngIf="signalrConnectionEstablished$ | async; else loading"
+                  [cpuValue]="cpuValue$ | async"
+                ></app-cpu>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center">
+              <div class="mx-auto wrapper">
+                <app-food
+                  [foodItems]="foodItems$ | async"
+                  [connectionEstablished]="signalrConnectionEstablished$ | async"
+                  (foodSaved)="saveFood($event)"
+                  (foodDeleted)="deleteFood($event)"
+                ></app-food>
+              </div>
+            </div>
+            <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-5">
+              <div class="mx-auto wrapper">
+                <app-chat
+                  [connectionEstablished]="signalrConnectionEstablished$ | async"
+                  (sendChat)="sendChat($event)"
+                  [chatmessages]="chatmessages"
+                ></app-chat>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12">
+
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-md-12">
+              <!-- Üçüncü satırın içeriği -->
+          </div>
+      </div>
   </div>
 </div>
+
 
 <ng-template #loading>Loading...</ng-template>
