--- a/src/app/dashboard/presentational/food/food.component.html
+++ b/src/app/dashboard/presentational/food/food.component.html
@@ -1,46 +1,51 @@
-<h2>FoodList</h2>
+<h2>Makine Listesi</h2>
 
-<form class="form-inline" (ngSubmit)="saveFood()" [formGroup]="form">
+<form class="form-inline mb-2" (ngSubmit)="saveFood()" [formGroup]="form">
   <div class="form-group mx-sm-6">
-    <input type="hidden" formControlName="id" />
-    <input
-      type="text"
-      class="form-control mb-2"
-      placeholder="Add food"
-      formControlName="itemName"
-    />
+    <div class="input-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Makine ekle"
+        formControlName="itemName"
+      />
+      <div class="input-group-append">
+        <button
+          type="submit"
+          [disabled]="form.invalid || !connectionEstablished"
+          class="btn btn-primary m-2"
+        >
+        <i class="fas fa-save"></i>
+          Kaydet
+        </button>
+      </div>
+    </div>
   </div>
-  <button
-    type="submit"
-    [disabled]="form.invalid || !connectionEstablished"
-    class="btn btn-primary mb-2"
-  >
-    Save
-  </button>
 </form>
 
 <div>
   <ul class="list-group">
-    <li *ngFor="let item of foodItems" class="list-group-item">
-      <i class="fas fa-utensils-alt"></i>{{ item.itemName }}
-      <span class="pull-right text-muted">
+    <li *ngFor="let item of foodItems" class="list-group-item d-flex justify-content-between align-items-center">
+      <span>{{ item.itemName }}</span>
+      <span>
         <button
-          class="btn btn-primary btn-sm ml-1"
+          class="btn btn-primary btn-sm mr-2"
           (click)="setFoodItemToEdit(item)"
           [disabled]="!connectionEstablished"
           type="button"
         >
-          <i class="fas fa-edit"></i>
+          <i class="fas fa-edit"></i> Düzenle
         </button>
         <button
-          class="btn btn-danger btn-sm ml-1"
+          class="btn btn-danger btn-sm m-2"
           (click)="deleteFoodItem(item)"
           [disabled]="!connectionEstablished"
           type="button"
         >
-          <i class="fas fa-trash-alt"></i>
+          <i class="fas fa-trash-alt"></i> Sil
         </button>
       </span>
     </li>
   </ul>
 </div>
+
