--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">ASP.NET Core SignalR</a>
+  <a class="navbar-brand m-2" href="#">Fabrika Üretim Canlı</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -16,11 +16,11 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" [routerLink]="['dashboard']"
-          >Home <span class="sr-only">(current)</span></a
+          >Anasayfa <span class="sr-only">(current)</span></a
         >
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['about']">About</a>
+        <a class="nav-link" [routerLink]="['about']">Hakkında</a>
       </li>
     </ul>
   </div>
